// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`minecraft test workflows generates test workflow without sonar: test workflow without sonar 1`] = `
"# <meta>
#    <source>@pssbletrngle/github-meta-generator</source>
#    <version>0.0.0-dev</version>
#    <timestamp>2025-01-01T00:00:00.000Z</timestamp>
#    <hash>abcdef</hash>
# </meta>

name: Test

on:
  workflow_dispatch:
    inputs:
      upload:
        description: "Upload Artifact"
        default: false
        required: true
        type: boolean

  pull_request:
    types: [opened, synchronize]

  push:
    branches:
      - "main"
      - "main/**"

env:
  CI: true

concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true

jobs:
  test:
    runs-on: ubuntu-latest
    timeout-minutes: 20
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0

      - uses: actions/setup-java@v4
        with:
          java-version: 21
          distribution: temurin

      - uses: gradle/actions/setup-gradle@v4
        with:
          cache-read-only: \${{ github.event_name != 'push' }}
          dependency-graph: generate-and-submit

      - name: Test
        run: ./gradlew build check

      - uses: actions/upload-artifact@v4
        if: \${{ inputs.upload }}
        with:
          name: build
          path: "**/build/libs/*.jar"
"
`;

exports[`minecraft test workflows generates test workflow with sonar: test workflow with sonar 1`] = `
"# <meta>
#    <source>@pssbletrngle/github-meta-generator</source>
#    <version>0.0.0-dev</version>
#    <timestamp>2025-01-01T00:00:00.000Z</timestamp>
#    <hash>abcdef</hash>
# </meta>

name: Test

on:
  workflow_dispatch:
    inputs:
      upload:
        description: "Upload Artifact"
        default: false
        required: true
        type: boolean

  pull_request:
    types: [opened, synchronize]

  push:
    branches:
      - "main"
      - "main/**"

env:
  CI: true

concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true

jobs:
  test:
    runs-on: ubuntu-latest
    timeout-minutes: 20
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0

      - uses: actions/setup-java@v4
        with:
          java-version: 21
          distribution: temurin

      - uses: gradle/actions/setup-gradle@v4
        with:
          cache-read-only: \${{ github.event_name != 'push' }}
          dependency-graph: generate-and-submit

      - name: Cache SonarQube packages
        if: \${{ github.event_name == 'push' }}
        uses: actions/cache@v4
        with:
          path: ~/.sonar/cache
          key: \${{ runner.os }}-sonar
          restore-keys: \${{ runner.os }}-sonar

      - name: Test
        run: ./gradlew build check

      - name: Analyze
        if: \${{ github.event_name == 'push' }}
        run: ./gradlew sonar
        env:
          SONAR_TOKEN: \${{ secrets.SONAR_TOKEN }}
          SONAR_HOST_URL: \${{ secrets.SONAR_HOST_URL }}
          GITHUB_DEPENDENCY_GRAPH_ENABLED: false

      - uses: actions/upload-artifact@v4
        if: \${{ inputs.upload }}
        with:
          name: build
          path: "**/build/libs/*.jar"
"
`;

exports[`minecraft test workflows generates test workflow with loader branches: test workflow with loaders 1`] = `
"# <meta>
#    <source>@pssbletrngle/github-meta-generator</source>
#    <version>0.0.0-dev</version>
#    <timestamp>2025-01-01T00:00:00.000Z</timestamp>
#    <hash>abcdef</hash>
# </meta>

name: Test

on:
  workflow_dispatch:
    inputs:
      upload:
        description: "Upload Artifact"
        default: false
        required: true
        type: boolean

  pull_request:
    types: [opened, synchronize]

  push:
    branches:
      - "main"
      - "main/**"

env:
  CI: true

concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true

jobs:
  test:
    runs-on: ubuntu-latest
    timeout-minutes: 20
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0

      - uses: actions/setup-java@v4
        with:
          java-version: 21
          distribution: temurin

      - uses: gradle/actions/setup-gradle@v4
        with:
          cache-read-only: \${{ github.event_name != 'push' }}
          dependency-graph: generate-and-submit

      - name: Test
        run: ./gradlew build check

      - uses: actions/upload-artifact@v4
        if: \${{ inputs.upload }}
        with:
          name: build
          path: "**/build/libs/*.jar"
"
`;

exports[`minecaft release workflows generates release workflow with curseforge: release workflow with curseforge 1`] = `
"# <meta>
#    <source>@pssbletrngle/github-meta-generator</source>
#    <version>0.0.0-dev</version>
#    <timestamp>2025-01-01T00:00:00.000Z</timestamp>
#    <hash>abcdef</hash>
# </meta>

name: Release
on:
  release:
    types: [published]

env:
  CI: true

jobs:
  build:
    runs-on: ubuntu-latest
    timeout-minutes: 20
    permissions:
      contents: read
      packages: read
    steps:
      - uses: actions/checkout@v4
        with:
          lfs: true

      - uses: actions/setup-java@v4
        with:
          java-version: 21
          distribution: temurin

      - uses: gradle/actions/setup-gradle@v4
        with:
          cache-read-only: \${{ github.event_name != 'push' }}

      - name: Build and upload
        run: ./gradlew build publish
        env:
          CURSEFORGE_TOKEN: \${{ secrets.CURSEFORGE_TOKEN }}
          CHANGELOG: \${{ github.event.release.body }}
          RELEASE_VERSION: \${{ github.event.release.tag_name }}
"
`;

exports[`minecaft release workflows generates release workflow with modrinth: release workflow with modrinth 1`] = `
"# <meta>
#    <source>@pssbletrngle/github-meta-generator</source>
#    <version>0.0.0-dev</version>
#    <timestamp>2025-01-01T00:00:00.000Z</timestamp>
#    <hash>abcdef</hash>
# </meta>

name: Release
on:
  release:
    types: [published]

env:
  CI: true

jobs:
  build:
    runs-on: ubuntu-latest
    timeout-minutes: 20
    permissions:
      contents: read
      packages: read
    steps:
      - uses: actions/checkout@v4
        with:
          lfs: true

      - uses: actions/setup-java@v4
        with:
          java-version: 21
          distribution: temurin

      - uses: gradle/actions/setup-gradle@v4
        with:
          cache-read-only: \${{ github.event_name != 'push' }}

      - name: Build and upload
        run: ./gradlew build publish
        env:
          MODRINTH_TOKEN: \${{ secrets.MODRINTH_TOKEN }}
          CHANGELOG: \${{ github.event.release.body }}
          RELEASE_VERSION: \${{ github.event.release.tag_name }}
"
`;

exports[`minecaft release workflows generates release workflow with github: release workflow with github 1`] = `
"# <meta>
#    <source>@pssbletrngle/github-meta-generator</source>
#    <version>0.0.0-dev</version>
#    <timestamp>2025-01-01T00:00:00.000Z</timestamp>
#    <hash>abcdef</hash>
# </meta>

name: Release
on:
  release:
    types: [published]

env:
  CI: true

jobs:
  build:
    runs-on: ubuntu-latest
    timeout-minutes: 20
    permissions:
      contents: read
      packages: write
    steps:
      - uses: actions/checkout@v4
        with:
          lfs: true

      - uses: actions/setup-java@v4
        with:
          java-version: 21
          distribution: temurin

      - uses: gradle/actions/setup-gradle@v4
        with:
          cache-read-only: \${{ github.event_name != 'push' }}

      - name: Build and upload
        run: ./gradlew build publish
        env:
          CHANGELOG: \${{ github.event.release.body }}
          RELEASE_VERSION: \${{ github.event.release.tag_name }}
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
"
`;

exports[`minecaft release workflows generates release workflow with nexus: release workflow with nexus 1`] = `
"# <meta>
#    <source>@pssbletrngle/github-meta-generator</source>
#    <version>0.0.0-dev</version>
#    <timestamp>2025-01-01T00:00:00.000Z</timestamp>
#    <hash>abcdef</hash>
# </meta>

name: Release
on:
  release:
    types: [published]

env:
  CI: true

jobs:
  build:
    runs-on: ubuntu-latest
    timeout-minutes: 20
    permissions:
      contents: read
      packages: read
    steps:
      - uses: actions/checkout@v4
        with:
          lfs: true

      - uses: actions/setup-java@v4
        with:
          java-version: 21
          distribution: temurin

      - uses: gradle/actions/setup-gradle@v4
        with:
          cache-read-only: \${{ github.event_name != 'push' }}

      - name: Build and upload
        run: ./gradlew build publish
        env:
          CHANGELOG: \${{ github.event.release.body }}
          RELEASE_VERSION: \${{ github.event.release.tag_name }}
          NEXUS_USER: \${{ secrets.NEXUS_USER }}
          NEXUS_TOKEN: \${{ secrets.NEXUS_TOKEN }}
"
`;
